staticfiles/css/main.css
/* ... */
.bold {
  font-weight: bold;
}
.text-center {
  text-align: center;
}
.text-right {
  text-align: right;
}
.text-small {
  font-size: small;
  padding: 5px 0;
}
.bg-nav {
  background-color: #ffffff;
}
.bg-goldenrod {
  background-color: rgba(196, 155, 23, 0.925);
}
.flex {
  display: flex;
  justify-content: center;
  margin-bottom: 5px;
}
.flex-align-center {
  display: flex;
  align-items: center;
}
.mt-1 {
  margin-top: 1rem;
}
.mt-2 {
  margin-top: 2rem;
}
.spacing-2 {
  line-height: 2em;
}
.gap-1 {
  gap: 1rem;
}
.flexbox-wrap {
  display: flex;
  position: relative;
  justify-content: center;
  align-items: center;
  text-align: center;
  flex-wrap: wrap;
}
article main {
  min-height: fit-content;
}
article footer {
  margin-top: 5rem;
  font-size: 1.2em;
  background-color: transparent;
}

.li-spacing li {
  margin-bottom: 10px;
}
.li-spacing li h2,
.faq h2 {
  font-size: 1.1em;
  text-align: left;
  font-weight: 500;
}
.faq h2 {
  font-weight: 600;
}
.faq > div {
  margin: 15px;
}
.border-faded {
  background: rgba(0, 0, 0, 0.7);
}

div.watermark::after {
  content: "";
  opacity: 0.2;
  top: 40px;
  bottom: 0;
  left: 0;
  right: 0;
  z-index: -1;
  position: absolute;
  background-image: url("/images/FBECDC_Trans_crest.png");
  background-repeat: repeat-y;
  background-position: top;
  background-size: contain;
  min-height: 80vh;
  width: 100%;
}

.contact h2 {
  font-size: 1.2em;
  text-align: start;
  margin: 5px 0;
}
.contact {
  margin: 10px 0;
}

/* 
    =======
    Layout
    =======
*/

.row {
  width: 100%;
}
.grid-container {
  margin: 10px 0;
  display: grid;
  grid-template-columns: repeat(2, 1fr);
  grid-gap: 2rem;
  align-items: center;
  justify-content: center;
}
#myContainer {
  padding: 0;
}
.footer-grid {
  flex: 1;
  display: grid;
  place-items: center;
  text-align: center;
  max-width: 1240px;
  margin: auto;
  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
  grid-gap: 1rem;
  align-items: center;
  line-height: 18px;
  font-size: 0.9rem;
}
.footer-grid > div h6 {
  text-align: left;
  font-size: 1.2rem;
  font-weight: 600;
}
.footer-grid > .footer-sizing {
  padding: 10px;
  display: flex;
  height: 100%;
  flex-direction: column;
  color: white;
  overflow: hidden;
}
.footer-sizing h6 {
  margin: 10px;
}
.footer-grid ul {
  list-style-type: none;
  color: rgb(255, 255, 255);
  margin: 0;
  padding: 0;
  text-align: left;
  font-size: smaller;
}
.footer-grid a {
  text-decoration: none;
  border: none;
  color: inherit;
}
.footer-grid a:hover {
  color: goldenrod !important;
}
.footer__head {
  font-size: 1.1em;
  font-weight: 600;
  text-align: left;
}
/* 
    ========
    Content
    ========
*/
.fa-info-circle {
  color: goldenrod;
  font-size: 1.1rem;
  margin: 0 1rem;
}
.sidebar-logo > img {
  vertical-align: middle;
}
.sidebar-logo > img {
  object-fit: contain;
  height: 2rem;
  width: 2rem;
}
#calendar {
  max-width: 1100px;
  margin: 40px auto;
}
.social,
.social a {
  color: rgb(82, 75, 75) !important;
  justify-content: flex-end;
  text-align: right;
}
.phoneNum {
  display: none;
  padding: 10px 0;
  font-family: Arial, Helvetica, sans-serif;
  font-size: 30px;
}
.animated-image {
  border-radius: 20px;
  width: 100%;
  object-fit: fill;
}
.fade-in {
  animation-name: fade-in;
  animation-fill-mode: forwards;
  animation-duration: 5000ms;
  transition: opacity ease-in;
  transition-delay: 1500ms;
}
.slide-right-anim {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  color: inherit;
  width: 100%;
  height: 100%;
  position: relative;
  left: 0px;
  animation-name: slide-in;
  animation-fill-mode: forwards;
  animation-duration: 1500ms;
  transition: left ease-in;
}
.slide-right-anim h3 {
  margin: 2em auto;
}
.slide-right-anim h2 {
  font-size: 2.5em;
}
.slide-right-anim p {
  font-size: 1.3rem;
  padding: 1em 3em;
}
.overlay {
  position: absolute;
  top: 0;
  left: 0;
  bottom: 0;
  right: 0;
  height: 100%;
  width: 0;
  background-color: rgba(0, 0, 0, 0.7);
  overflow: hidden;
  transition: 500ms ease-in-out;
}
.section-b {
  position: relative;
  transition: 500ms ease-in-out;
}

.section-b-inner {
  white-space: inherit;
  left: 0;
  height: 100%;
  color: white;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  text-align: center;
}
.section-b-inner h3 {
  font-size: 4vw;
}
.copyright {
  height: 50px;
  background-color: rgb(52, 0, 97);
  color: rgb(255, 255, 255);
  text-align: center;
  font-size: small;
  display: flex;
  align-items: center;
  justify-content: center;
}

.img-400 {
  height: 350px;
  width: 400px;
  object-fit: cover;
  object-position: center;
}

/* 
================
Hover States
==============
*/
a.btn--primary:hover,
button.btn--primary:hover,
input.btn--primary:hover {
  background-color: blueviolet;
  color: white;
}
.nav__link:not(.btn):hover {
  text-decoration: blueviolet underline 3px;
  color: blueviolet;
}
.logo .nav__link:hover {
  text-decoration: none;
}

@keyframes slide-in {
  from {
    left: -2000px;
  }
  to {
    left: 0px;
  }
}
@keyframes fade-in {
  from {
    opacity: 0;
  }
  to {
    opacity: 1;
  }
}

@keyframes tempSlide {
  22% {
    transform: translateX(0);
  }
  25% {
    transform: translateX(-100vw);
  }
  47% {
    transform: translateX(-100vw);
  }
  50% {
    transform: translateX(-200vw);
  }
  73% {
    transform: translateX(-200vw);
  }
  75% {
    transform: translateX(-300vw);
  }
  95% {
    transform: translateX(-300vw);
  }
  100% {
    transform: translateX(0);
  }
}
/* ... */

